Quality Profile's SearchDataLoader with Java 8 streams